# MLLM-JSQ

./: .gitignore  AGENT.md  README.md  main.py  pyproject.toml  requirements.txt  run.py
configs/: llama2_7b_w8a8.yaml  qwen2_vl_7b_w8a8_s0.4375.yaml
jsq/: config.py
jsq/calibration/: multimodal.py  text.py
jsq/compression/: block_search.py  collector.py  pipeline.py
jsq/compression/passes/: base.py  clip.py  prune.py  quantize.py  smooth.py
jsq/eval/: lmms_eval.py  ppl.py
jsq/models/: __init__.py  base.py  llama.py  qwen2.py  qwen2_5_vl.py  qwen2_vl.py  qwen3_vl.py  registry.py
jsq/quant/: linear.py  ops.py  save_load.py
scripts/: compress_llm.sh  compress_qwen2vl.sh  eval_qwen2vl.sh
